package ejercicio5;

public class Canoe extends Barco {
    public Canoe() {
        super(1);
    }
}
