package ejercicio5;

public class Frigate extends Barco {
    public Frigate() {
        super(3);
    }
}
